@@ -1,3 +1,9 @@
+2007-03-07  Carlos Garcia Campos <carlosgc@gnome.org>
+	reviewed by: Albert Astals Cid <aacid@kde.org>
+
+        * poppler/Page.cc: Consider 0x0 boxes as invalid. Fixes
+	http://bugzilla.gnome.org/show_bug.cgi?id=408682
+
 2007-02-24  Albert Astals Cid <aacid@kde.org>
 	* configure.ac: Change {datadir}/poppler to {datarootdir}/poppler so
 	that i get /usr/local/share/poppler in config.h instead of
